--- a/new_new_simulation.ipynb
+++ b/new_new_simulation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "50a6cff9",
+   "id": "514decd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,14 @@
     "import warnings\n",
     "from itertools import product\n",
     "warnings.filterwarnings('ignore')\n",
-    "from openpyxl import load_workbook"
+    "from openpyxl import load_workbook\n",
+    "from scipy import optimize"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "54f9d8da",
+   "id": "9bf04372",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "de72868b",
+   "id": "54a67e18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "72ace4a5",
+   "id": "3e8df051",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4e78d13d",
+   "id": "485051e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8e07ed37",
+   "id": "60c6604d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4e16e21a",
+   "id": "920686b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7c3f9792",
+   "id": "ab56a8c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9cd1b79f",
+   "id": "0faa16c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2e9b4f5e",
+   "id": "70426df0",
    "metadata": {
     "tags": []
    },
@@ -245,7 +246,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Time:  0:05:18 Elapsed Time: 0:05:18  (100%)   Country: United Kingdom Running: Ploting result: Death factor                                                   \n"
+      "Time:  0:05:24 Elapsed Time: 0:05:24  (100%)   Country: United Kingdom Running: Ploting result: Death factor                                                   \n"
      ]
     },
     {
@@ -284,6 +285,12 @@
     "df_method_5 = pd.DataFrame(columns=['covid deaths gamma=0 (fraction of population)[%]', 'covid deaths gamma=0.8 (fraction of population)[%]', 'covid deaths gamma=1 (fraction of population)[%]',\n",
     "                                    'covid cases by ifr gamma=0 (fraction of population)[%]', 'covid cases by ifr gamma=0.8 (fraction of population)[%]', 'covid cases by ifr gamma=1 (fraction of population)[%]',\n",
     "                                    'covid cases (fraction of population)[%]', 'IFR'])\n",
+    "\n",
+    "df_method_6 = pd.DataFrame(columns=['covid deaths gamma=0 (fraction of population)[%]', 'covid deaths gamma=0.8 (fraction of population)[%]', 'covid deaths gamma=1 (fraction of population)[%]',\n",
+    "                                    'covid cases by ifr gamma=0 (fraction of population)[%]', 'covid cases by ifr gamma=0.8 (fraction of population)[%]', 'covid cases by ifr gamma=1 (fraction of population)[%]',\n",
+    "                                    'covid cases (fraction of population)[%]', 'IFR'])\n",
+    "\n",
+    "df_method_7 = pd.DataFrame(columns=['covid cases by ifr gamma=0 (fraction of population)[%]', 'covid cases by ifr gamma=0.8 (fraction of population)[%]', 'covid cases by ifr gamma=1 (fraction of population)[%]'])\n",
     "\n",
     "for country_index, (country, regions) in enumerate(countries.items()):\n",
     "#     if country != 'Germany':\n",
@@ -483,6 +490,8 @@
     "        df_method_3 = df_method_3.append(pd.DataFrame(index=[country]))\n",
     "        df_method_4 = df_method_4.append(pd.DataFrame(index=[country]))\n",
     "        df_method_5 = df_method_5.append(pd.DataFrame(index=[country]))\n",
+    "        df_method_6 = df_method_6.append(pd.DataFrame(index=[country]))\n",
+    "        df_method_7 = df_method_7.append(pd.DataFrame(index=[country]))\n",
     "        week = '2021W22'\n",
     "        \n",
     "        \n",
@@ -649,21 +658,36 @@
     "            df_method_2['covid cases (fraction of population)[%]'][country] = float(weekly_regional_cases.cumsum(axis=1).iloc[-1, :][week] / population[population['Age group'] == 'TOTAL'][region].to_numpy()* 100)\n",
     "            df_method_2['IFR'][country] = IFRs[country]['TOTAL']\n",
     "\n",
-    "            # Method 5\n",
-    "            df = weekly_regional_cases.loc[['50+'], :].rolling(window=window, axis=1, min_periods=1, center=True).mean().cumsum(axis=1)\n",
-    "            cases_based_on_ifr = corrected_covid_deaths_window.loc[['50+'], :].copy().cumsum(axis=1)\n",
-    "            df_method_5[f'covid deaths gamma={gamma} (fraction of population)[%]'][country] = float(cases_based_on_ifr[week] / population[population['Age group'] == '50+'][region].to_numpy() * 100)\n",
+    "            # Method 5 and 6\n",
+    "            df = weekly_regional_cases.loc[['50+', '50-54', '55-59', '60-64', '65-69', '70-74', '75-79', '80+'], :].rolling(window=window, axis=1, min_periods=1, center=True).mean().cumsum(axis=1)\n",
+    "            cases_based_on_ifr = corrected_covid_deaths_window.loc[['50+', '50-54', '55-59', '60-64', '65-69', '70-74', '75-79', '80+'], :].copy().cumsum(axis=1)\n",
+    "            df_method_5[f'covid deaths gamma={gamma} (fraction of population)[%]'][country] = float(cases_based_on_ifr.loc[['50+'], :][week] / population[population['Age group'] == '50+'][region].to_numpy() * 100)\n",
+    "            df_method_6[f'covid deaths gamma={gamma} (fraction of population)[%]'][country] = float(cases_based_on_ifr.loc[['50-54', '55-59', '60-64', '65-69', '70-74', '75-79', '80+'], :].sum()[week] / population[population['Age group'] == '50+'][region].to_numpy() * 100)\n",
     "            for age_group, ifr in IFRs[country].items():\n",
-    "                if age_group in ['45-64', '50-64', 'TOTAL', '00-49', '50-54', '55-59', '60-64', '65-69', '70-74', '75-79', '80+']:\n",
+    "                if age_group in ['45-64', '50-64', 'TOTAL', '00-49']:\n",
     "                    continue                                                                                                          \n",
     "                cases_based_on_ifr.loc[age_group, :] = cases_based_on_ifr.loc[age_group, :].apply(lambda x: 100*x/ifr)\n",
     "                df.loc[age_group, :] = cases_based_on_ifr.loc[age_group, :] / df.loc[age_group, :]\n",
     "                df.loc[age_group, :] = df.loc[age_group, :].fillna(0)\n",
     "                df.loc[age_group, :] = df.loc[age_group, :].apply(lambda x: np.maximum(1.0, x))   \n",
-    "            df_method_5[f'covid cases by ifr gamma={gamma} (fraction of population)[%]'][country] = float(cases_based_on_ifr[week] / population[population['Age group'] == '50+'][region].to_numpy() * 100)\n",
+    "            df_method_5[f'covid cases by ifr gamma={gamma} (fraction of population)[%]'][country] = float(cases_based_on_ifr.loc[['50+'], :][week] / population[population['Age group'] == '50+'][region].to_numpy() * 100)\n",
+    "            df_method_6[f'covid cases by ifr gamma={gamma} (fraction of population)[%]'][country] = float(cases_based_on_ifr.loc[['50-54', '55-59', '60-64', '65-69', '70-74', '75-79', '80+'], :].sum()[week] / population[population['Age group'] == '50+'][region].to_numpy() * 100)\n",
     "            df_method_5['covid cases (fraction of population)[%]'][country] = float(weekly_regional_cases.cumsum(axis=1).iloc[-1, :][week] / population[population['Age group'] == '50+'][region].to_numpy()* 100)\n",
     "            df_method_5['IFR'][country] = IFRs[country]['50+']\n",
+    "            df_method_6['covid cases (fraction of population)[%]'][country] = float(weekly_regional_cases.cumsum(axis=1).iloc[-1, :][week] / population[population['Age group'] == '50+'][region].to_numpy()* 100)\n",
+    "            df_method_6['IFR'][country] = IFRs[country]['50+']\n",
     "            bar.update()\n",
+    "            \n",
+    "            # Method 7\n",
+    "            def func(x, i):\n",
+    "                return i*x\n",
+    "            da = corrected_covid_deaths_window.loc[['00-49', '50-54', '55-59', '60-64', '65-69', '70-74', '75-79', '80+'], :].copy().cumsum(axis=1)[week].to_numpy()\n",
+    "            pa = population[population['Age group'].isin(['00-49', '50-54', '55-59', '60-64', '65-69', '70-74', '75-79', '80+'])].reset_index(drop=True).drop(columns=['Age group']).T.to_numpy()[0] \n",
+    "            pafa = pa * np.array([IFRs[country][key] / 100 for key in ['00-49', '50-54', '55-59', '60-64', '65-69', '70-74', '75-79', '80+']]) / population[population['Age group'] == 'TOTAL'].reset_index(drop=True).drop(columns=['Age group']).T.to_numpy()[0]\n",
+    "\n",
+    "            alpha = optimize.curve_fit(func, xdata = pafa, ydata = da)[0]\n",
+    "            \n",
+    "            df_method_7[f'covid cases by ifr gamma={gamma} (fraction of population)[%]'][country] = float(alpha / population[population['Age group'] == 'TOTAL'].reset_index(drop=True).drop(columns=['Age group']).T.to_numpy()[0] * 100)\n",
     "\n",
     "        format_label.update_mapping(country=country, running=f'Ploting result: Death factor' + ' ' * 30)\n",
     "        bar.update()\n",
@@ -704,14 +728,16 @@
     "df_method_3.to_excel(f'{result_dir_path}/Method_3.xlsx')\n",
     "df_method_4.to_excel(f'{result_dir_path}/Method_4.xlsx')\n",
     "df_method_5.to_excel(f'{result_dir_path}/Method_5.xlsx')\n",
+    "df_method_6.to_excel(f'{result_dir_path}/Method_6.xlsx')\n",
+    "df_method_7.to_excel(f'{result_dir_path}/Method_7.xlsx')\n",
     "bar.finish()\n",
     "print('Simulation done')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "5830491f",
+   "execution_count": 11,
+   "id": "77fe53f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +747,9 @@
     "     'method 2': df_method_2.loc[:, columns],\n",
     "     'method 3': df_method_3.loc[:, columns],\n",
     "     'method 4': df_method_4.loc[:, columns],\n",
-    "     'method 5': df_method_5.loc[:, columns],}\n",
+    "     'method 5': df_method_5.loc[:, columns],\n",
+    "     'method 6': df_method_6.loc[:, columns],\n",
+    "     'method 7': df_method_7.loc[:, columns],}\n",
     "pd.concat(d, axis=1).to_excel(f'{result_dir_path}/gamma=0.xlsx')\n",
     "\n",
     "columns = ['covid cases by ifr gamma=0.8 (fraction of population)[%]']\n",
@@ -730,7 +758,9 @@
     "     'method 2': df_method_2.loc[:, columns],\n",
     "     'method 3': df_method_3.loc[:, columns],\n",
     "     'method 4': df_method_4.loc[:, columns],\n",
-    "     'method 5': df_method_5.loc[:, columns],}\n",
+    "     'method 5': df_method_5.loc[:, columns],\n",
+    "     'method 6': df_method_6.loc[:, columns],\n",
+    "     'method 7': df_method_7.loc[:, columns],}\n",
     "pd.concat(d, axis=1).to_excel(f'{result_dir_path}/gamma=0.8.xlsx')\n",
     "\n",
     "columns = ['covid cases by ifr gamma=1 (fraction of population)[%]']\n",
@@ -739,7 +769,9 @@
     "     'method 2': df_method_2.loc[:, columns],\n",
     "     'method 3': df_method_3.loc[:, columns],\n",
     "     'method 4': df_method_4.loc[:, columns],\n",
-    "     'method 5': df_method_5.loc[:, columns],}\n",
+    "     'method 5': df_method_5.loc[:, columns],\n",
+    "     'method 6': df_method_6.loc[:, columns],\n",
+    "     'method 7': df_method_7.loc[:, columns],}\n",
     "pd.concat(d, axis=1).to_excel(f'{result_dir_path}/gamma=1.xlsx')\n",
     "\n",
     "columns = ['covid cases by ifr gamma=0 (fraction of population)[%]', 'covid cases by ifr gamma=0.8 (fraction of population)[%]', 'covid cases by ifr gamma=1 (fraction of population)[%]']\n",
@@ -748,14 +780,16 @@
     "     'method 2': df_method_2.loc[:, columns],\n",
     "     'method 3': df_method_3.loc[:, columns],\n",
     "     'method 4': df_method_4.loc[:, columns],\n",
-    "     'method 5': df_method_5.loc[:, columns],}\n",
+    "     'method 5': df_method_5.loc[:, columns],\n",
+    "     'method 6': df_method_6.loc[:, columns],\n",
+    "     'method 7': df_method_7.loc[:, columns],}\n",
     "pd.concat(d, axis=1).to_excel(f'{result_dir_path}/gamma=all.xlsx')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "529efd6d",
+   "id": "ba843e0b",
    "metadata": {},
    "outputs": [],
    "source": []
