--- a/new_new_simulation.ipynb
+++ b/new_new_simulation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "514decd0",
+   "id": "3a9a6d23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9bf04372",
+   "id": "60cc8b40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "54a67e18",
+   "id": "07406d60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3e8df051",
+   "id": "4293fa3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "485051e7",
+   "id": "4d54d83d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "60c6604d",
+   "id": "ec9c3f86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "920686b8",
+   "id": "966584b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ab56a8c4",
+   "id": "f3a39933",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0faa16c8",
+   "id": "8d17bab6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "70426df0",
+   "id": "0d009d10",
    "metadata": {
     "tags": []
    },
@@ -246,7 +246,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Time:  0:05:24 Elapsed Time: 0:05:24  (100%)   Country: United Kingdom Running: Ploting result: Death factor                                                   \n"
+      "Time:  0:05:18 Elapsed Time: 0:05:18  (100%)   Country: United Kingdom Running: Ploting result: Death factor                                                   \n"
      ]
     },
     {
@@ -291,6 +291,10 @@
     "                                    'covid cases (fraction of population)[%]', 'IFR'])\n",
     "\n",
     "df_method_7 = pd.DataFrame(columns=['covid cases by ifr gamma=0 (fraction of population)[%]', 'covid cases by ifr gamma=0.8 (fraction of population)[%]', 'covid cases by ifr gamma=1 (fraction of population)[%]'])\n",
+    "\n",
+    "df_method_8 = pd.DataFrame(columns=['covid deaths gamma=0 (fraction of population)[%]', 'covid deaths gamma=0.8 (fraction of population)[%]', 'covid deaths gamma=1 (fraction of population)[%]',\n",
+    "                                    'covid cases by ifr gamma=0 (fraction of population)[%]', 'covid cases by ifr gamma=0.8 (fraction of population)[%]', 'covid cases by ifr gamma=1 (fraction of population)[%]',\n",
+    "                                    'covid cases (fraction of population)[%]', 'IFR'])\n",
     "\n",
     "for country_index, (country, regions) in enumerate(countries.items()):\n",
     "#     if country != 'Germany':\n",
@@ -492,6 +496,7 @@
     "        df_method_5 = df_method_5.append(pd.DataFrame(index=[country]))\n",
     "        df_method_6 = df_method_6.append(pd.DataFrame(index=[country]))\n",
     "        df_method_7 = df_method_7.append(pd.DataFrame(index=[country]))\n",
+    "        df_method_8 = df_method_8.append(pd.DataFrame(index=[country]))\n",
     "        week = '2021W22'\n",
     "        \n",
     "        \n",
@@ -597,7 +602,7 @@
     "            df_method_1['covid cases (fraction of population)[%]'][country] = float(weekly_regional_cases.cumsum(axis=1).iloc[-1, :][week] / population[population['Age group'] == 'TOTAL'][region].to_numpy()* 100)\n",
     "            df_method_1['IFR'][country] = IFRs[country]['TOTAL']\n",
     "\n",
-    "            # Method 2\n",
+    "            # Method 3\n",
     "            df = weekly_regional_cases.loc[['00-49', '50-54', '55-59', '60-64', '65-69', '70-74', '75-79', '80+', 'TOTAL'], :].rolling(window=window, axis=1, min_periods=1, center=True).mean().cumsum(axis=1)\n",
     "            cases_based_on_ifr = corrected_covid_deaths_window.loc[['00-49', '50-54', '55-59', '60-64', '65-69', '70-74', '75-79', '80+'], :].copy().cumsum(axis=1)\n",
     "            cases_based_on_ifr = cases_based_on_ifr.append(pd.DataFrame(cases_based_on_ifr.sum(), columns=['TOTAL']).T)\n",
@@ -620,7 +625,7 @@
     "            df_method_3['covid cases (fraction of population)[%]'][country] = float(weekly_regional_cases.cumsum(axis=1).iloc[-1, :][week] / population[population['Age group'] == 'TOTAL'][region].to_numpy()* 100)\n",
     "            df_method_3['IFR'][country] = IFRs[country]['TOTAL']\n",
     "\n",
-    "            # Method 3\n",
+    "            # Method 4\n",
     "            df = weekly_regional_cases.loc[['00-49', '50-54', '55-59', '60-64', '65-69', '70-74', '75-79', '80+', 'TOTAL'], :].rolling(window=window, axis=1, min_periods=1, center=True).mean().cumsum(axis=1)\n",
     "            cases_based_on_ifr = corrected_covid_deaths_window.loc[['00-49', '50-54', '55-59', '60-64', '65-69', '70-74', '75-79', '80+'], :].copy().cumsum(axis=1)\n",
     "            cases_based_on_ifr = cases_based_on_ifr.append(pd.DataFrame(cases_based_on_ifr.sum(), columns=['TOTAL']).T)\n",
@@ -638,12 +643,15 @@
     "                    cases_based_on_ifr.loc[age_group, :] = cases_based_on_ifr.loc[age_group, :].apply(lambda x: 100*x/ifr)\n",
     "                    df.loc[age_group, :] = cases_based_on_ifr.loc[age_group, :] / df.loc[age_group, :]\n",
     "                    df.loc[age_group, :] = df.loc[age_group, :].fillna(0)\n",
-    "                    df.loc[age_group, :] = df.loc[age_group, :].apply(lambda x: np.maximum(1.0, x))   \n",
+    "                    df.loc[age_group, :] = df.loc[age_group, :].apply(lambda x: np.maximum(1.0, x))\n",
+    "            df_method_8[f'covid cases by ifr gamma={gamma} (fraction of population)[%]'][country] = float(cases_based_on_ifr.iloc[-1, :][week] / population[population['Age group'] == 'TOTAL'][region].to_numpy() * 100)   \n",
+    "            df_method_8['covid cases (fraction of population)[%]'][country] = float(weekly_regional_cases.cumsum(axis=1).iloc[-1, :][week] / population[population['Age group'] == 'TOTAL'][region].to_numpy()* 100)\n",
+    "            df_method_8['IFR'][country] = IFRs[country]['TOTAL']\n",
     "            df_method_4[f'covid cases by ifr gamma={gamma} (fraction of population)[%]'][country] = float(cases_based_on_ifr.iloc[:-1, :].sum()[week] / population[population['Age group'] == 'TOTAL'][region].to_numpy() * 100)   \n",
     "            df_method_4['covid cases (fraction of population)[%]'][country] = float(weekly_regional_cases.cumsum(axis=1).iloc[-1, :][week] / population[population['Age group'] == 'TOTAL'][region].to_numpy()* 100)\n",
     "            df_method_4['IFR'][country] = IFRs[country]['TOTAL']\n",
     "\n",
-    "            # Method 4\n",
+    "            # Method 2\n",
     "            df = weekly_regional_cases.loc[['TOTAL'], :].rolling(window=window, axis=1, min_periods=1, center=True).mean().cumsum(axis=1)\n",
     "            cases_based_on_ifr = corrected_covid_deaths_window.loc[['TOTAL'], :].copy().cumsum(axis=1)\n",
     "            df_method_2[f'covid deaths gamma={gamma} (fraction of population)[%]'][country] = float(cases_based_on_ifr[week] / population[population['Age group'] == 'TOTAL'][region].to_numpy() * 100)\n",
@@ -689,6 +697,7 @@
     "            \n",
     "            df_method_7[f'covid cases by ifr gamma={gamma} (fraction of population)[%]'][country] = float(alpha / population[population['Age group'] == 'TOTAL'].reset_index(drop=True).drop(columns=['Age group']).T.to_numpy()[0] * 100)\n",
     "\n",
+    "\n",
     "        format_label.update_mapping(country=country, running=f'Ploting result: Death factor' + ' ' * 30)\n",
     "        bar.update()\n",
     "        \n",
@@ -730,6 +739,7 @@
     "df_method_5.to_excel(f'{result_dir_path}/Method_5.xlsx')\n",
     "df_method_6.to_excel(f'{result_dir_path}/Method_6.xlsx')\n",
     "df_method_7.to_excel(f'{result_dir_path}/Method_7.xlsx')\n",
+    "df_method_8.to_excel(f'{result_dir_path}/Method_8.xlsx')\n",
     "bar.finish()\n",
     "print('Simulation done')"
    ]
@@ -737,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "77fe53f8",
+   "id": "373e0d05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +759,8 @@
     "     'method 4': df_method_4.loc[:, columns],\n",
     "     'method 5': df_method_5.loc[:, columns],\n",
     "     'method 6': df_method_6.loc[:, columns],\n",
-    "     'method 7': df_method_7.loc[:, columns],}\n",
+    "     'method 7': df_method_7.loc[:, columns],\n",
+    "     'method 8': df_method_8.loc[:, columns],}\n",
     "pd.concat(d, axis=1).to_excel(f'{result_dir_path}/gamma=0.xlsx')\n",
     "\n",
     "columns = ['covid cases by ifr gamma=0.8 (fraction of population)[%]']\n",
@@ -760,7 +771,8 @@
     "     'method 4': df_method_4.loc[:, columns],\n",
     "     'method 5': df_method_5.loc[:, columns],\n",
     "     'method 6': df_method_6.loc[:, columns],\n",
-    "     'method 7': df_method_7.loc[:, columns],}\n",
+    "     'method 7': df_method_7.loc[:, columns],\n",
+    "     'method 8': df_method_8.loc[:, columns],}\n",
     "pd.concat(d, axis=1).to_excel(f'{result_dir_path}/gamma=0.8.xlsx')\n",
     "\n",
     "columns = ['covid cases by ifr gamma=1 (fraction of population)[%]']\n",
@@ -771,7 +783,8 @@
     "     'method 4': df_method_4.loc[:, columns],\n",
     "     'method 5': df_method_5.loc[:, columns],\n",
     "     'method 6': df_method_6.loc[:, columns],\n",
-    "     'method 7': df_method_7.loc[:, columns],}\n",
+    "     'method 7': df_method_7.loc[:, columns],\n",
+    "     'method 8': df_method_8.loc[:, columns],}\n",
     "pd.concat(d, axis=1).to_excel(f'{result_dir_path}/gamma=1.xlsx')\n",
     "\n",
     "columns = ['covid cases by ifr gamma=0 (fraction of population)[%]', 'covid cases by ifr gamma=0.8 (fraction of population)[%]', 'covid cases by ifr gamma=1 (fraction of population)[%]']\n",
@@ -782,17 +795,10 @@
     "     'method 4': df_method_4.loc[:, columns],\n",
     "     'method 5': df_method_5.loc[:, columns],\n",
     "     'method 6': df_method_6.loc[:, columns],\n",
-    "     'method 7': df_method_7.loc[:, columns],}\n",
+    "     'method 7': df_method_7.loc[:, columns],\n",
+    "     'method 8': df_method_8.loc[:, columns],}\n",
     "pd.concat(d, axis=1).to_excel(f'{result_dir_path}/gamma=all.xlsx')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba843e0b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
